--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -31,11 +31,33 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
+} */
+
+.card{
+  margin-left: 24px;
+  margin-top: 12px;
+  width: 50%;
+  height: 10%;
+  border: 8px solid (--black);
+  border-radius: 16px;
+  overflow: hidden;
+  display: flex ;
+  
+
+}
+.navbar{
+
+  display: flex
+
+
 }
 
-.card {
-  padding: 2em;
+body {
+  /* background-color: hsl(42, 92%, 56%); */
+  background-image: url("../src/assets/images/Fondo.jpg");
+  background-image: linear-gradient(hsl(0, 0%, 0%), hsl(44, 100%, 40%), hsl(44, 95%, 50%));
 }
+
 
 .read-the-docs {
   color: #888;
